apps/base/app-of-apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-store
  labels:
    monitoring: prometheus
    #istio-injection: enabled
    app.kubernetes.io/version: enabled
