apps/base/app-of-apps/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
  namespace: retail-store
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*" # Domain name of the external website
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: path-routing
  namespace: retail-store
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
        - uri:
            prefix: /db
      route:
        - destination:
            host: app-3.retail-store.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: app-1.retail-store.svc.cluster.local
            port:
              number: 80
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: enable-mtls
  namespace: retail-store
spec:
  mtls:
    mode: STRICT
