apps/base/app-of-apps/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: path-routing
  namespace: retail-store
spec:
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /db
      route:
        - destination:
            host: app-3
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: app-1
            port:
              number: 80
